[metadata]
name = verifyml
version = 0.0.1
author = Cylynx
author_email = hello@cylynx.io
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cylynx/veritas_project
project_urls =
    Bug Tracker = https://github.com/cylynx/veritas_project/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires = 
    absl-py >= 0.9
    semantic-version >= 2.8.0
    jinja2 >= 2.10
    matplotlib >= 3.2.0
    jsonschema >= 3.2.0
    scikit-learn >= 1.0
    category_encoders >= 2.2.2
    protobuf >= 3.18.0
    numpy <= 1.20
    shap >= 0.39.0