[metadata]
name = verifyml
version = 0.0.5
author = Cylynx
author_email = hello@cylynx.io
description = An open-source toolkit to implement responsible AI workflows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cylynx/verifyml
project_urls =
    Bug Tracker = https://github.com/cylynx/verifyml/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires = 
    absl-py >= 0.9
    semantic-version >= 2.8.0
    jinja2 >= 2.10
    matplotlib >= 3.2.0
    jsonschema >= 3.2.0
    scikit-learn >= 1.0
    category_encoders >= 2.2.2
    protobuf >= 3.18.0
    numpy >= 1.2
    numba >= 0.55.0
    pyparsing>=2.4.2,<3.0.0a0 
    shap >= 0.39.0